--- a/App/style.css
+++ b/App/style.css
@@ -1,3 +1,4 @@
+
 body {
 
     display: flex;
@@ -5,7 +6,8 @@ body {
     justify-content: center;
     align-items: flex-start;
     padding-top: 100px;
-    background: #70e1f5;  /* fallback for old browsers */
+    background: #70e1f5;
+      /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #ffd194, #70e1f5);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #ffd194, #70e1f5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
@@ -68,7 +70,6 @@ iframe {
     background-color: white;
     border: none;
     border-radius: 5px;
-    font-family: 'Raleway', sans-serif;
     outline: none;
     
 }
